# wieland

./: Cargo.toml  README.md
crates/domain/: Cargo.toml
crates/domain/src/: item.rs  item_contract.rs  lib.rs  wie_error.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: db_error.rs  idb_item_repo.rs  lib.rs
crates/persistence/tests/: item_repo_wasm.rs
crates/ui_web/: Cargo.toml  index.html
crates/ui_web/src/: main.rs  shell.rs
crates/ui_web/src/tabs/: crafting.rs  hunting.rs  items.rs  mod.rs
