[package]
name = "ui_web"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos        = { version = "0.7.8", features = ["csr"] }
leptos_router = "0.7.8"
wasm-bindgen  = "0.2.104"
console_error_panic_hook = "0.1.7"

js-sys = "0.3.81"
log = "0.4.28"
domain          = { path = "../domain" }
persistence = { path = "../persistence" }
web-sys = "0.3.81"

[[bin]]
name = "ui_web"
path = "src/main.rs"

